# arithmeticsvc

./: LICENSE  README.md  pyproject.toml
src/arithmeticsvc/: api.py  arithmetic.py  cli.py  client.py
tests/: test_arithmetic_service.py
