[tool.poetry]
name = "arithmeticsvc"
version = "0.1.0"
description = ""
authors = ["Natalia Maximo <nmaximo@microsoft.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.0"
typer = "^0.12.3"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
httpx = "^0.27.0"


[tool.poetry.group.tests.dependencies]
flake8 = { version = "^7.1.0" }
mypy = { version = "^1.10.1" }
pytest = { version = "^8.2.2" }
pytest-cov = { version = "^5.0.0" }
pytest-sugar = { version = "^1.0.0" }
pytest-xdist = { version = "^3.6.1" }
flake8-pyproject = "^1.2.3"
ruff = "^0.5.0"
bandit = {version = "^1.7.9", extras = ["toml"]}


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["routes: tests for api routes", "unit"]

[tool.mypy]
files = ["src/**/*.py"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
arcli = 'arithmeticsvc.cli:app'
